Reafctors AuthenticationService to correctly authenticate user